changes on index.html file

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                     129.362C2.45775 97.8511 -7.48481 59.1033 6.67581 34.5279C20.9871 10.1032 59.7028 
                                     -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z" />
                                 <image class="home__blob-img" x=""
-                                    xlink:href="packages/images/IMG_20230307_130101 (3).jpg" />
+                                    xlink:href="packages/images/DSC_8896.jpg" />
                             </g>
                         </svg>
                     </div>
@@ -209,10 +209,7 @@
                                 </div>
                             </div>
                             <div class="skills__data">
-                                <!-- <div class="skills__titles">
-                                       <h3 class="skills__name">Google Suite</h3>
-                                       <span class="skills__number">70%</span>
-                                   </div> -->
+                            
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__google"></span>
                                 </div>
